--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -7,6 +7,10 @@
 <meta name="description" content="">
 <meta name="viewport" content="width=device-width">
 <title>Angular Sample</title>
+
+<link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
+
+
 </head>
 <body ng-app="angularSampleApp" ng-strict-di>
 
@@ -14,8 +18,10 @@
 		<!-- nav bar views -->
 	</div>
 
-	<div class="well" ui-view="content">
-		<!-- Angular views -->
+	<div class="container">
+		<div class="well" ui-view="content">
+			<!-- Angular views -->
+		</div>
 	</div>
 
 	<!-- <div ui-view="footer" ng-cloak>
@@ -24,6 +30,8 @@
 
 
 	<!-- Java Script Files :: START -->
+	<script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+	<script src="bower_components/jquery/dist/jquery.min.js"></script>
 	<script src="bower_components/angular/angular.min.js"></script>
 	<script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
 	<script
@@ -47,7 +55,6 @@
 	<script src="app/contactus/contact_us.state.js"></script>
 
 	<!-- GULP FILE INJECT :: START -->
-	<!-- CUrrent -->
 	<!-- GULP FILE INJECT :: END -->
 
 
