--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -9,7 +9,7 @@
 <title>Angular Sample</title>
 
 <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
-
+<link rel="stylesheet" href="content/css/app.css">
 
 </head>
 <body ng-app="angularSampleApp" ng-strict-di>
@@ -53,6 +53,9 @@
 	<script src="app/home/home.controller.js"></script>
 	<script src="app/contactus/contact_us.controller.js"></script>
 	<script src="app/contactus/contact_us.state.js"></script>
+	<script src="app/components/login/login.controller.js"></script>
+	
+	<script src="app/components/login/login.service.js"></script>
 
 	<!-- GULP FILE INJECT :: START -->
 	<!-- GULP FILE INJECT :: END -->
