Gulp script added

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -56,6 +56,10 @@
 	<script src="app/components/login/login.controller.js"></script>
 	
 	<script src="app/components/login/login.service.js"></script>
+	<script src="app/service/auth.service.js"></script>
+	<script src="app/service/auth.session.service.js"></script>
+	<script src="app/service/principal.service.js"></script>
+	<script src="app/service/account.service.js"></script>
 
 	<!-- GULP FILE INJECT :: START -->
 	<!-- GULP FILE INJECT :: END -->
