Thumbnail Generator Test

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -40,44 +40,26 @@
 	<script src="bower_components/ngstorage/ngStorage.js"></script>
 	<!-- Java Script Files ::   END -->
 
-
-
-<!-- 	<script src="app/app.js"></script>
-	<script src="app/blocks/handlers/state.handler.js"></script>
-
-
-	<script src="app/app.constants.js"></script>
-	<script src="app/app.state.js"></script>
-	<script src="app/layouts/navbar/navbar.controller.js"></script>
+	<!-- inject:js -->
+	<script src="app/app.js"></script>
+	<script src="app/thumbnail_generator/thumbnail_generator_test.state.js"></script>
+	<script src="app/thumbnail_generator/thumbnail_generator_test.controller.js"></script>
+	<script src="app/thumbnail_generator/thumbnail_generator.service.js"></script>
+	<script src="app/thumbnail_generator/select_file.service.js"></script>
+	<script src="app/service/principal.service.js"></script>
+	<script src="app/service/auth.session.service.js"></script>
+	<script src="app/service/auth.service.js"></script>
+	<script src="app/service/account.service.js"></script>
 	<script src="app/layouts/navbar/navbar.controller.js"></script>
 	<script src="app/home/home.state.js"></script>
 	<script src="app/home/home.controller.js"></script>
-	<script src="app/contactus/contact_us.controller.js"></script>
 	<script src="app/contactus/contact_us.state.js"></script>
-	<script src="app/components/login/login.controller.js"></script>
-
+	<script src="app/contactus/contact_us.controller.js"></script>
 	<script src="app/components/login/login.service.js"></script>
-	<script src="app/service/auth.service.js"></script>
-	<script src="app/service/auth.session.service.js"></script>
-	<script src="app/service/principal.service.js"></script>
-	<script src="app/service/account.service.js"></script> -->
-
-	<!-- inject:js -->
-	<script src="app/app-1cac83ed72.min.js"></script>
-	<script src="app/service/principal-d7e1bd464e.service.min.js"></script>
-	<script src="app/service/auth-76920d818a.session.service.min.js"></script>
-	<script src="app/service/auth-9390fb3f78.service.min.js"></script>
-	<script src="app/service/account-6b45d1d708.service.min.js"></script>
-	<script src="app/layouts/navbar/navbar-456725bf83.controller.min.js"></script>
-	<script src="app/home/home-c4764f9f6e.state.min.js"></script>
-	<script src="app/home/home-938270f70a.controller.min.js"></script>
-	<script src="app/contactus/contact_us-dcafcd9fcd.controller.min.js"></script>
-	<script src="app/contactus/contact_us-4b8bf35933.state.min.js"></script>
-	<script src="app/components/login/login-e26709a35e.service.min.js"></script>
-	<script src="app/components/login/login-d2a95c73ae.controller.min.js"></script>
-	<script src="app/blocks/handlers/state-664fb6662e.handler.min.js"></script>
-	<script src="app/app-a53e9b6b98.constants.min.js"></script>
-	<script src="app/app-0f557645c5.state.min.js"></script>
+	<script src="app/components/login/login.controller.js"></script>
+	<script src="app/blocks/handlers/state.handler.js"></script>
+	<script src="app/app.state.js"></script>
+	<script src="app/app.constants.js"></script>
 	<!-- endinject -->
 
 
