--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -11,7 +11,7 @@
 <link rel="stylesheet"
 	href="bower_components/bootstrap/dist/css/bootstrap.min.css">
 <link rel="stylesheet" href="content/css/app.css">
-
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDUD3Gf-Oge3ePIX0jrI1yNT8voJJRVTXM"></script>
 </head>
 <body ng-app="angularSampleApp" ng-strict-di>
 
@@ -50,6 +50,8 @@
 	<script src="app/service/auth.session.service.js"></script>
 	<script src="app/service/auth.service.js"></script>
 	<script src="app/service/account.service.js"></script>
+	<script src="app/location/location.state.js"></script>
+	<script src="app/location/location.controller.js"></script>
 	<script src="app/layouts/navbar/navbar.controller.js"></script>
 	<script src="app/home/home.state.js"></script>
 	<script src="app/home/home.controller.js"></script>
